# MetaAIHackathon_WorkSimVoyager_Final

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_all.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  endpoints.ts  mock.ts
frontend/src/components/common/: Button.tsx  Card.tsx  Panel.tsx
frontend/src/components/game/: ActionForm.tsx  EpisodeSummary.tsx  GameBoard.tsx  InboxPanel.tsx  RewardBreakdown.tsx  StatePanel.tsx  TaskSelection.tsx
frontend/src/components/playground/: ApiExplorer.tsx  Playground.tsx  SchemaViewer.tsx  ToolSandbox.tsx
frontend/src/hooks/: useBackendAPI.ts
frontend/src/types/: api.ts  game.ts
server/: __init__.py  __main__.py  app.py  env.py  models.py
server/graders/: __init__.py  grader_registry.py
server/tasks/: __init__.py  task_registry.py
server/tools/: __init__.py  workspace_tools.py
