[project]
name = "worksim-voyager"
version = "0.1.0"
description = "WorkSim Voyager: A workplace simulation OpenEnv environment for agentic RL"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
inference = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
